--- a/src/product_pages/marmot-ajax-3.html
+++ b/src/product_pages/marmot-ajax-3.html
@@ -65,9 +65,9 @@
           src="../images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg"
           alt="Marmot Ajax tent"
         />
-
-        <p class="product-card__price">$199.99</p>
-
+        <div class="product-price">
+          <p class="product-card__price">$199.99</p>
+        </div>
         <p class="product__color">Pale Pumpkin/Terracotta</p>
 
         <p class="product__description">
