Enhance product detail and cart functionality: add quantity selector, improve cart notifications, and implement product list rendering

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -46,12 +46,13 @@
 
       <div class="cart-container"></div>
       <div class="product-detail__add">
-        <div class="quantity-selector">
+        <div class="product-detail__quantity">
           <label for="quantity">Quantity:</label>
           <input
             type="number"
             id="quantity"
             name="quantity"
+            class="quantity-input"
             value="1"
             min="1"
             max="99"
@@ -59,7 +60,7 @@
         </div>
     </main>
 
-    <!-- <template id="cart-template">
+   <template id="cart-template">
       <main class="divider">
         <section class="product-detail">
           <div class="cart-item">
@@ -72,9 +73,9 @@
           </div>
         </section>
       </main>
-    </template> -->
+    </template> 
 
-      <!-- <button id="addToCart" data-id="">Add to Cart</button> -->
+    
     </div>
     <footer id="main-footer"></footer>
   </body>
