just the packages installed after run npm install

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -61,7 +61,7 @@
     </main>
 
    <template id="cart-template">
-      <main class="divider">
+      <div class="divider">
         <section class="product-detail">
           <div class="cart-item">
             <div class="brand-name"></div>
@@ -72,7 +72,7 @@
             <div class="product__description"></div>
           </div>
         </section>
-      </main>
+      </div>
     </template> 
 
     
