chore: Clean up index.html for improved readability and structure

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,6 @@
   </header>
   <main class="divider">
      <div class="hero">
-
-
-  
     <main class="divider">
       <div class="hero">
 
@@ -48,13 +45,13 @@
         <h2>Shop by Category</h2>
         <ul class="category-list">
           <li>
-            <a href="product_listing/index.html?category=tents">
+            <a href="/product_listing/index.html?category=tents">
               <img src="public/images/category-tents.svg" alt="Tents" />
               <span>Tents</span>
             </a>
           </li>
           <li>
-            <a href="product_listing/index.html?category=sleeping-bags">
+            <a href="/product_listing/index.html?category=sleeping-bags">
               <img
                 src="public/images/category-sleepingbags.svg"
                 alt="Sleeping Bags"
@@ -63,13 +60,13 @@
             </a>
           </li>
           <li>
-            <a href="product_listing/index.html?category=backpacks">
+            <a href="/product_listing/index.html?category=backpacks">
               <img src="public/images/category-backpacks.svg" alt="Backpacks" />
               <span>Backpacks</span>
             </a>
           </li>
           <li>
-            <a href="product_listing/index.html?category=hammocks">
+            <a href="/product_listing/index.html?category=hammocks">
               <img src="public/images/category-hammocks.svg" alt="Hammocks" />
               <span>Hammocks</span>
             </a>
