--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -13,6 +13,17 @@
     <main class="divider">
       <section class="products">
         <h2>Top Products</h2>
+        <!-- Add this sort container -->
+        <div class="sort-container">
+          <label for="sortSelect">Sort by:</label>
+          <select id="sortSelect">
+            <option value="">Select sorting</option>
+            <option value="name-asc">Name (A-Z)</option>
+            <option value="name-desc">Name (Z-A)</option>
+            <option value="price-asc">Price (Low to High)</option>
+            <option value="price-desc">Price (High to Low)</option>
+          </select>
+        </div>
         <!-- CONTENEDOR DINÁMICO (antes tenía lista estática) -->
         <ul class="product-list" id="product-list-container"></ul>
       </section>
