--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../js/cart.js" type="module"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
 
   <body>
