--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Product Make and Name</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <!-- Remove main.js since it's for product listing -->
     <script src="../js/product.js" type="module"></script>
-    <script src="../js/main.js" type="module"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
 
   <body>
