--- a/src/wishlist/index.html
+++ b/src/wishlist/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Wishlist</title>
-    <link rel="stylesheet" href="../css/style.css" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
-
   <body>
     <header class="divider" id="main-header"></header>
     <main class="divider">
@@ -17,6 +15,6 @@
       </section>
     </main>
     <footer id="main-footer"></footer>
-    <script type="module" src="../js/wishlist.js"></script>
+    <script src="/js/wishlist.js" type="module"></script>
   </body>
 </html>
