fix: Update newsletterSignup script to use module type and clean up Vite configuration

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>SleepOutside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
     <script src="js/main.js" type="module"></script>
-    <script src="./js/newsletterSignup.js" defer></script>
+    <script type="module" src="./js/newsletterSignup.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
 
