--- a/src/wishlist/index.html
+++ b/src/wishlist/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Wishlist</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <script type="module" src="../js/wishlist.js"></script>
+    <script type="module" src="/js/wishlist.js"></script>
   </head>
   <body>
     <header class="divider" id="main-header"></header>
