--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../css/style.css" />
     <!-- Remove main.js since it's for product listing -->
     <script src="../js/product.js" type="module"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
   </head>
 
   <body>
